deployment/k8s/demo/ingress_config.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-my-nginx
spec:
  rules:
    - host: noneops.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: my-nginx-backend
                port:
                  number: 80
  ingressClassName: nginx
